# flask_factor_3

./: .gitignore  app.py  models.py  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
routes/: campaigns.py  characters.py  home.py  players.py
services/: campaign_service.py  character_service.py  player_service.py
templates/: base.html
templates/campaigns/: campaign_add.html  campaign_edit.html  campaign_list.html
templates/characters/: character_add.html  character_edit.html  character_list.html
templates/home/: home.html
templates/partials/: footer.html  header.html
templates/players/: add_player.html  list.html  player_add.html  player_edit.html  player_list.html
tests/: test_campaign_service.py  test_character_service.py  test_models.py  test_player.py  test_player_service.py
