[project]
name = "flask-factor-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.3",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.pytest.ini_options]
adopts = "-ra -q"
pythonpath = [".", "routes", "services", "templates"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN001", "ANN101"] # don't require type annotations on self

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Ignore asserts in tests
