[project]
name = "flask-factor-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-wtf>=1.2.2",
    "flask>=3.0.3",
    "pydantic[email]>=2.9.2",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "pytest-flask>=1.3.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = [
    "*",
    "services",
     "routes",
]
